# GaiaTemplateProject

./: CMakeLists.txt  README.md
GaiaTemplateExecutable/: CMakeLists.txt
GaiaTemplateLibrary/: CMakeLists.txt  PackageConfig.cmake.in
GaiaTemplateTest/: CMakeLists.txt
